added cs and id styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
+  <body id="one">
     <h1>This is page 1</h1>
     <p><a href="pageTwo.html">Go to Page Two</a></p>
     <p>Use the form below to make a pizza order.</p>
