--- a/pageTwo.html
+++ b/pageTwo.html
@@ -7,11 +7,20 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="images/pngtree-rubber-duck-bathing-cute-play-png-image_3321934.jpg" />
   </head>
-  <body>
+  <body id="two">
+    <h1>This is page 2</h1>
+    <p><a href="index.html">Go To Page 1</a></p>
+    <h2>The pizza list from local storage</h2>
+    <button id="pizzaButton">Click to see pizza types</button>
+    <ul id="pizzaList"></ul>
+    
 
     
-    <script src="" async defer></script>
+    <script src="js/app.js"></script>
+    <script src="js/appTwo.js"></script>
   </body>
 </html>
