constructor and event in js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p><a href="pageTwo.html">Go to Page Two</a></p>
     <p>Use the form below to make a pizza order.</p>
 
-    <form>
+    <form id="pizzaform">
       <fieldset>
 
 
